--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.10",
     "next": "14.1.4",
     "react": "^18",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
@@ -20,6 +23,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
