--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
+    "moment-timezone": "^0.5.45",
     "next": "14.1.4",
     "react": "^18",
     "react-datepicker": "^6.9.0",
